--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -7,4 +7,24 @@
         <p>lorem ipsum</p>
     </div>
 
+    <div class="container">
+        <h2>
+            Les derniers produits
+        </h2>
+        <div class="row flex">
+            {% for product in products %}
+                <div class="col-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="card-title">
+                                <a href="#">{{ product.title }}</a>
+                            </h3>
+                            <p class="card-text">{{ product.description }}</p>
+                            <div class="text-danger" style="font-weight: bold; font-size: 3rem">{{ product.price }} €</div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
