--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,6 +20,9 @@
                 </li>
             </ul>
         </div>
+        <div class="text-right">
+            <a class="btn btn-secondary" href="{{ path('admin.product.new') }}">Créer un nouveau bien</a>
+        </div>
     </nav>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
