--- a/templates/admin/product/index.html.twig
+++ b/templates/admin/product/index.html.twig
@@ -42,6 +42,9 @@
                 {% endfor %}
                 </tbody>
             </table>
+            <div class="text-right">
+                <a class="btn btn-secondary" href="{{ path('admin.product.new') }}">Créer un nouveau bien</a>
+            </div>
         </div>
     </div>
 
