--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,10 +18,20 @@
                 <li class="nav-item">
                     <a class="nav-link {% if current_menu is defined and current_menu == 'products' %}active{% endif %}" href="{{ path('product.index') }}">Voir les liens</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if current_menu is defined and current_menu == 'shop' %}active{% endif %}" href="{{ path('product.shop') }}">Shop</a>
+                </li>
             </ul>
-        </div>
-        <div class="text-right">
-            <a class="btn btn-secondary" href="{{ path('admin.product.new') }}">Créer un nouveau bien</a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="{{ path('admin.product.index') }}" class="nav-link">Admin</a>
+                </li>
+            {% if app.user %}
+                <li class="nav-item">
+                    <a href="{{ path('logout') }}" class="nav-link">Se déconnecter</a>
+                </li>
+            {% endif %}
+            </ul>
         </div>
     </nav>
         {% block body %}{% endblock %}
