--- a/templates/product/shop.html.twig
+++ b/templates/product/shop.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title 'Voir les biens' %}
+{% block title 'shop' %}
 
 {% block body %}
 
     <div class="container mt-4">
-        <h1>Tous les biens</h1>
+        <h1>Shop</h1>
         <div class="row flex">
-            {% for product  in products %}
+            {% for product in products %}
                 <div class="col-3 my-3">
                     <div class="card" style="box-shadow: 10px 10px 10px grey;">
                         <div class="card-body">
@@ -25,3 +25,5 @@
     </div>
 
 {% endblock %}
+
+
